Added tweeting functionality

--- a/Frontend/Web/components/login.html
+++ b/Frontend/Web/components/login.html
@@ -8,7 +8,7 @@
 
             <div class="mb-3">
                 <input type="form-control" class="form-control" v-bind:class="usernameInvalid ? 'is-invalid': ''"
-                    id="loginUsername" rows="1" placeholder="Username" required aria-describedby="usernameValidation">
+                    id="loginUsername" placeholder="Username" required aria-describedby="usernameValidation">
 
                 <div id="usernameValidation" class="invalid-feedback">
                     {{ usernameMessage }}
