--- a/Frontend/Web/components/nav.html
+++ b/Frontend/Web/components/nav.html
@@ -1,55 +1,56 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">AspTwitter</a>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">AspTwitter</a>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#messages">Messages</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#messages">Messages</a>
+        </li>
+      </ul>
 
-        <ul class="navbar-nav">
-          <li class="nav-item dropdown" v-if="logged">
-            <a class="nav-link dropdown-toggle" role="button" id="profileMenu" data-bs-toggle="dropdown"
-              aria-expanded="false">{{ username }}</a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li class="nav-item">
-                <a class="dropdown-item" href="#edit">Edit</a>
-              </li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li class="nav-item">
-                <a class="dropdown-item" v-on:click="logout" href="#logout">Logout</a>
-              </li>
-            </ul>
-          </li>
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown" v-if="logged">
+          <a class="nav-link dropdown-toggle" role="button" id="profileMenu" data-bs-toggle="dropdown"
+            aria-expanded="false">{{ username }}</a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li class="nav-item">
+              <a class="dropdown-item" href="#edit">Edit</a>
+            </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li class="nav-item">
+              <a class="dropdown-item" v-on:click="logout" href="#logout">Sign out</a>
+            </li>
+          </ul>
+        </li>
 
-          <li class="nav-item dropdown" v-else>
-            <a class="nav-link dropdown-toggle" role="button" id="loginMenu" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              Anonymous
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li class="nav-item dropdown" v-else>
+          <a class="nav-link dropdown-toggle" role="button" id="loginMenu" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Anonymous
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-              <li class="nav-item">
-                <a class="dropdown-item" data-bs-toggle="modal" href="#login">Login</a>
-              </li>
-              <li class="nav-item">
-                <a class="dropdown-item" data-bs-toggle="modal" href="#register">Register</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
+            <li class="nav-item">
+              <a class="dropdown-item" data-bs-toggle="modal" href="#login">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="dropdown-item" data-bs-toggle="modal" href="#register">Register</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
 
-      </div>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+
     </div>
-  </nav>
+  </div>
+</nav>
