--- a/Frontend/Web/components/register.html
+++ b/Frontend/Web/components/register.html
@@ -1,50 +1,50 @@
 <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Register</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title">Register</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="modal-body">
+
+      <div class="mb-3">
+        <input type="form-control" class="form-control" v-bind:class="nameInvalid ? 'is-invalid': ''" id="registerName"
+          rows="1" placeholder="Name" required aria-describedby="nameValidation">
+
+        <div id="nameValidation" class="invalid-feedback">
+          Name required
+        </div>
       </div>
-      <div class="modal-body">
 
-        <div class="mb-3">
-          <input type="form-control" class="form-control" v-bind:class="nameInvalid ? 'is-invalid': ''"
-            id="registerName" rows="1" placeholder="Name" required aria-describedby="nameValidation">
+      <div class="mb-3">
+        <input type="form-control" class="form-control" v-bind:class="usernameInvalid ? 'is-invalid': ''"
+          id="registerUsername" placeholder="Username" required aria-describedby="usernameValidation">
 
-          <div id="nameValidation" class="invalid-feedback">
-            Name required
-          </div>
+        <div id="usernameValidation" class="invalid-feedback">
+          {{ usernameMessage }}
         </div>
-
-        <div class="mb-3">
-          <input type="form-control" class="form-control" v-bind:class="usernameInvalid ? 'is-invalid': ''"
-            id="registerUsername" rows="1" placeholder="Username" required aria-describedby="usernameValidation">
-
-          <div id="usernameValidation" class="invalid-feedback">
-            {{ usernameMessage }}
-          </div>
-        </div>
-
-        <div class="mb-3">
-          <input type="email" class="form-control" id="registerEmail" v-bind:class="emailInvalid ? 'is-invalid': ''"
-            aria-describedby="emailValidation" placeholder="Email">
-
-          <div id="emailValidation" class="invalid-feedback">
-            Invalid email format
-          </div>
-        </div>
-
-        <div class="mb-3">
-          <input type="password" class="form-control" v-bind:class="passwordInvalid ? 'is-invalid': ''"
-            id="registerPassword" placeholder="Password" required aria-describedby="passwordValidation">
-
-          <div id="passwordValidation" class="invalid-feedback">
-            {{ passwordMessage }}
-          </div>
-        </div>
-
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" v-on:click="register">Sign up</button>
+
+      <div class="mb-3">
+        <input type="email" class="form-control" id="registerEmail" v-bind:class="emailInvalid ? 'is-invalid': ''"
+          aria-describedby="emailValidation" placeholder="Email">
+
+        <div id="emailValidation" class="invalid-feedback">
+          Invalid email format
+        </div>
       </div>
+
+      <div class="mb-3">
+        <input type="password" class="form-control" v-bind:class="passwordInvalid ? 'is-invalid': ''"
+          id="registerPassword" placeholder="Password" required aria-describedby="passwordValidation">
+
+        <div id="passwordValidation" class="invalid-feedback">
+          {{ passwordMessage }}
+        </div>
+      </div>
+
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-primary" v-on:click="register">Sign up</button>
     </div>
   </div>
+</div>
