Added profile editing & avatars

--- a/Frontend/Web/components/nav.html
+++ b/Frontend/Web/components/nav.html
@@ -18,7 +18,7 @@
             aria-expanded="false">{{ username }}</a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li class="nav-item">
-              <a class="dropdown-item" href="#edit">Edit</a>
+              <a class="dropdown-item" data-bs-toggle="modal" href="#edit">Edit</a>
             </li>
             <li>
               <hr class="dropdown-divider">
