--- a/Frontend/Web/components/home.html
+++ b/Frontend/Web/components/home.html
@@ -5,15 +5,15 @@
   </div>
 </div>
 
-<div class="container-fluid px-5 p-3">
+<div class="container-fluid p-3">
   <div class="row gx-3">
 
     <!--Left padding-->
     <div class="col-2"></div>
 
     <!--Entries column-->
-    <div class="col-5">
-      <div class="p-3 border bg-light" v-if="logged">
+    <div class="col-5 bg-light" style="height: 90vh;">
+      <div class="p-3 border-bottom bg-light" v-if="logged">
         <textarea type="text" style="resize: none; overflow: hidden;" id="post" class="form-control" maxlength="256"
           placeholder="What's happening?" v-model="text" aria-describedby="charCounter"
           oninput='this.style.height = "";this.style.height = this.scrollHeight + "px"'></textarea>
@@ -26,15 +26,16 @@
         </div>
       </div>
 
-      <div class="p-3 border bg-light" v-for="entry in entries" v-bind:key="entry.id">
-        <b style="font-size: large;">{{ entry.author.name }}</b> @{{ entry.author.username }} <br>
-        <a style="color: black;">{{ entry.text }}</a>
+      <div class="bg-light overflow-auto" v-bind:style="logged ? 'height: 80vh;': 'height: 90vh;'">
+        <div class="p-3 border-bottom bg-light" v-for="entry in entries" v-bind:key="entry.id">
+          <b style="font-size: large;">{{ entry.author.name }}</b> @{{ entry.author.username }} <br>
+          <a style="color: black;">{{ entry.text }}</a>
+        </div>
       </div>
     </div>
 
-
-    <div class="col-3">
-      <div class="p-3 border bg-light">Reserved</div>
+    <div class="col-4">
+      <div class="p-3 border-bottom bg-light">Reserved</div>
     </div>
   </div>
 </div>
