--- a/Frontend/Web/components/nav.html
+++ b/Frontend/Web/components/nav.html
@@ -1,48 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">AspTwitter</a>
+    <a class="navbar-brand">AspTwitter</a>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#messages">Messages</a>
-        </li>
-      </ul>
-
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown" v-if="logged">
-          <a class="nav-link dropdown-toggle" role="button" id="profileMenu" data-bs-toggle="dropdown"
-            aria-expanded="false">{{ username }}</a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li class="nav-item">
-              <a class="dropdown-item" data-bs-toggle="modal" href="#edit">Edit</a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li class="nav-item">
-              <a class="dropdown-item" v-on:click="logout" href="#logout">Sign out</a>
-            </li>
-          </ul>
+    <div class="collapse navbar-collapse" id="navbar">
+      <ul class="nav nav-tabs me-auto mb-2 mb-lg-0">
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active" style="outline: none;" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button"
+            role="tab" aria-controls="home" aria-selected="true">Home</button>
         </li>
 
-        <li class="nav-item dropdown" v-else>
-          <a class="nav-link dropdown-toggle" role="button" id="loginMenu" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            Anonymous
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li class="nav-item" role="presentation" v-if="logged">
+          <button class="nav-link" style="outline: none;" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button"
+            role="tab" aria-controls="profile" aria-selected="false">Profile</button>
+        </li>
 
-            <li class="nav-item">
-              <a class="dropdown-item" data-bs-toggle="modal" href="#login">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="dropdown-item" data-bs-toggle="modal" href="#register">Register</a>
-            </li>
-          </ul>
+        <li class="nav-item" role="presentation" v-if="logged">
+          <button class="nav-link" style="outline: none;" id="messages-tab" data-bs-toggle="tab" data-bs-target="#messages" type="button"
+            role="tab" aria-controls="messages" aria-selected="false">Messages</button>
         </li>
       </ul>
 
@@ -50,6 +24,19 @@
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
+
+      <ul class="nav">
+        <li class="nav-item" v-if="logged">
+          <button class="btn btn-secondary ms-2" type="button" v-on:click="logout">Logout</button>
+        </li>
+
+        <li class="nav-item" v-if="!logged">
+          <button class="btn btn-primary ms-2" role="button" data-bs-toggle="modal" data-bs-target="#login" type="button">Login</button>
+        </li>
+        <li class="nav-item" v-if="!logged">
+          <button class="btn btn-secondary ms-1" data-bs-toggle="modal" data-bs-target="#register" type="button">Register</button>
+        </li>
+      </ul>
 
     </div>
   </div>
