--- a/Frontend/Web/components/nav.html
+++ b/Frontend/Web/components/nav.html
@@ -5,18 +5,20 @@
     <div class="collapse navbar-collapse" id="navbar">
       <ul class="nav nav-tabs me-auto mb-2 mb-lg-0">
         <li class="nav-item" role="presentation">
-          <button class="nav-link active" style="outline: none;" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button"
-            role="tab" aria-controls="home" aria-selected="true">Home</button>
+          <button class="nav-link active" style="outline: none;" id="home-tab" data-bs-toggle="tab"
+            data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Home</button>
         </li>
 
-        <li class="nav-item" role="presentation" v-if="logged">
-          <button class="nav-link" style="outline: none;" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button"
-            role="tab" aria-controls="profile" aria-selected="false">Profile</button>
+        <li class="nav-item" role="presentation" v-if="user.logged">
+          <button class="nav-link" style="outline: none;" id="profile-tab" data-bs-toggle="tab"
+            data-bs-target="#profile" type="button" role="tab" aria-controls="profile"
+            aria-selected="false">Profile</button>
         </li>
 
-        <li class="nav-item" role="presentation" v-if="logged">
-          <button class="nav-link" style="outline: none;" id="messages-tab" data-bs-toggle="tab" data-bs-target="#messages" type="button"
-            role="tab" aria-controls="messages" aria-selected="false">Messages</button>
+        <li class="nav-item" role="presentation" v-if="user.logged">
+          <button class="nav-link" style="outline: none;" id="messages-tab" data-bs-toggle="tab"
+            data-bs-target="#messages" type="button" role="tab" aria-controls="messages"
+            aria-selected="false">Messages</button>
         </li>
       </ul>
 
@@ -26,15 +28,17 @@
       </form>
 
       <ul class="nav">
-        <li class="nav-item" v-if="logged">
+        <li class="nav-item" v-if="user.logged">
           <button class="btn btn-secondary ms-2" type="button" v-on:click="logout">Logout</button>
         </li>
 
-        <li class="nav-item" v-if="!logged">
-          <button class="btn btn-primary ms-2" role="button" data-bs-toggle="modal" data-bs-target="#login" type="button">Login</button>
+        <li class="nav-item" v-if="!user.logged">
+          <button class="btn btn-primary ms-2" role="button" data-bs-toggle="modal" data-bs-target="#login"
+            type="button">Login</button>
         </li>
-        <li class="nav-item" v-if="!logged">
-          <button class="btn btn-secondary ms-1" data-bs-toggle="modal" data-bs-target="#register" type="button">Register</button>
+        <li class="nav-item" v-if="!user.logged">
+          <button class="btn btn-secondary ms-1" data-bs-toggle="modal" data-bs-target="#register"
+            type="button">Register</button>
         </li>
       </ul>
 
