--- a/Frontend/Web/components/profile.html
+++ b/Frontend/Web/components/profile.html
@@ -17,10 +17,10 @@
                     data-bs-target="#edit" type="button">Edit profile</button>
 
                 <p>
-                    <b style="font-size: large;">{{ name }}</b><br>
-                    @{{ username }}
+                    <b style="font-size: large;">{{ user.name }}</b><br>
+                    @{{ user.username }}
                 </p>
-                <p style="color: black;">{{ about }}</p>
+                <p style="color: black;">{{ user.about }}</p>
             </div>
 
 
