--- a/Frontend/Web/components/home.html
+++ b/Frontend/Web/components/home.html
@@ -18,7 +18,7 @@
           placeholder="What's happening?" v-model="text" aria-describedby="charCounter"
           oninput='this.style.height = "";this.style.height = this.scrollHeight + "px"'></textarea>
 
-        <div class="d-flex p-2 justify-content-between" v-if="charactersLeft != null">
+        <div class="d-flex p-2 justify-content-between">
           <div id="charCounter" class="form-text">
             {{ charactersLeft }}
           </div>
@@ -26,9 +26,14 @@
         </div>
       </div>
 
-      <div class="bg-light overflow-auto" v-bind:style="user.logged ? 'height: 80vh;': 'height: 90vh;'">
-        <div class="p-3 border-bottom bg-light" v-for="entry in entries" v-bind:key="entry.id">
-          <b style="font-size: large;">{{ entry.author.name }}</b> @{{ entry.author.username }} <br>
+      <div class="bg-light overflow-auto" v-bind:style="user.logged ? 'height: 73vh;': 'height: 90vh;'">
+        <div class="p-3 border-bottom bg-light" v-for="(entry, index) in entries.all" :key="entry.id">
+          <b style="font-size: large;">{{ entry.author.name }}</b> @{{ entry.author.username }}
+
+          <button type="button" class="btn btn-default" aria-label="Left Align"
+            v-on:click="deleteEntry(index, entry.id)" v-if="entry.author.id == user.id">
+            <span class="fa fa-trash" aria-hidden="true"></span>
+          </button> <br>
           <a style="color: black;">{{ entry.text }}</a>
         </div>
       </div>
