--- a/Frontend/Web/components/auth/login.html
+++ b/Frontend/Web/components/auth/login.html
@@ -2,7 +2,7 @@
     <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title">Login</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" v-on:click="clear"></button>
         </div>
         <div class="modal-body">
 
@@ -23,7 +23,7 @@
                     <div class="input-group-addon">
                         <button class="btn btn-default reveal shadow-none" type="button"
                             v-on:click="passwordVisible = !passwordVisible">
-                            <i class="fa" v-bind:class="passwordVisible ? 'fa-eye': 'fa-eye-slash'" aria-hidden="true"></i>
+                            <i class="la" v-bind:class="passwordVisible ? 'la-eye': 'la-eye-slash'" aria-hidden="true"></i>
                         </button>
                     </div>
                 </div>
