--- a/Frontend/Web/components/nav.html
+++ b/Frontend/Web/components/nav.html
@@ -9,16 +9,22 @@
             data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Home</button>
         </li>
 
-        <li class="nav-item" role="presentation" v-if="user.logged">
+        <li class="nav-item" role="presentation">
           <button class="nav-link" style="outline: none;" id="profile-tab" data-bs-toggle="tab"
-            data-bs-target="#profile" type="button" role="tab" aria-controls="profile"
-            aria-selected="false">Profile</button>
+            data-bs-target="#explore" type="button" role="tab" aria-controls="explore"
+            aria-selected="false">Explore</button>
         </li>
 
         <li class="nav-item" role="presentation" v-if="user.logged">
           <button class="nav-link" style="outline: none;" id="messages-tab" data-bs-toggle="tab"
             data-bs-target="#messages" type="button" role="tab" aria-controls="messages"
             aria-selected="false">Messages</button>
+        </li>
+
+        <li class="nav-item" role="presentation" v-if="user.logged">
+          <button class="nav-link" style="outline: none;" id="profile-tab" data-bs-toggle="tab"
+            data-bs-target="#profile" type="button" role="tab" aria-controls="profile"
+            aria-selected="false">Profile</button>
         </li>
       </ul>
 
