--- a/Frontend/Web/components/nav.html
+++ b/Frontend/Web/components/nav.html
@@ -10,7 +10,7 @@
         </li>
 
         <li class="nav-item" role="presentation">
-          <button class="nav-link" style="outline: none;" id="profile-tab" data-bs-toggle="tab"
+          <button class="nav-link" style="outline: none;" id="explore-tab" data-bs-toggle="tab"
             data-bs-target="#explore" type="button" role="tab" aria-controls="explore"
             aria-selected="false">Explore</button>
         </li>
@@ -27,11 +27,6 @@
             aria-selected="false">Profile</button>
         </li>
       </ul>
-
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
 
       <ul class="nav">
         <li class="nav-item" v-if="user.logged">
