--- a/Frontend/Web/components/profile/edit.html
+++ b/Frontend/Web/components/profile/edit.html
@@ -2,13 +2,12 @@
     <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title">Edit</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" v-on:click="reset" aria-label="Close"></button>
         </div>
         <div class="modal-body">
             <div class="form-floating mb-3">
                 <input type="form-control" class="form-control" v-bind:class="nameInvalid ? 'is-invalid': ''"
-                    id="editName" v-model="originalName" :placeholder="originalName" required
-                    aria-describedby="nameValidation">
+                    id="editName" v-bind:value="user.name" required aria-describedby="nameValidation">
                 <label for="editName">Name</label>
 
                 <div id="nameValidation" class="invalid-feedback">
@@ -18,15 +17,9 @@
 
             <div class="form-floating mb-3">
                 <textarea type="form-control" type="text" style="resize: none; overflow: hidden;" class="form-control"
-                    id="about" maxlength="160" v-model="about" aria-describedby="charCounter"
+                    id="about" maxlength="160" v-bind:value="user.about"
                     oninput='this.style.height = "";this.style.height = this.scrollHeight + "px"'></textarea>
                 <label for="about">About</label>
-
-                <div class="d-flex p-2" v-if="charactersLeft != null">
-                    <div id="charCounter" class="form-text">
-                        {{ charactersLeft }}
-                    </div>
-                </div>
 
             </div>
             <div class="modal-footer">
