--- a/Frontend/Web/components/explore.html
+++ b/Frontend/Web/components/explore.html
@@ -30,26 +30,8 @@
                 <div class="tab-pane show active" id="users" role="tabpanel" aria-labelledby="users-tab">
                     <div class="bg-light" v-if="!showProfile && searchUsers">
                         <div class="container p-3 bg-light">
-                            <div class="row border-bottom p-3" v-for="listUser in users" v-bind:key="listUser.id">
-                                <div class="col-auto">
-                                    <img v-bind:src='getAvatar(listUser.id)' class="img rounded-circle"
-                                        style="width: 50px; height: 50px; outline: none; cursor: pointer"
-                                        v-on:click="openProfile(listUser)" alt="avatar">
-                                </div>
-
-                                <div class="col-auto" v-on:click="openProfile(listUser)" style="cursor: pointer">
-                                    <b style="font-size: large;">{{ listUser.name }}</b>
-                                    <br>
-                                    @{{ listUser.username }}
-                                </div>
-
-                                <div class="col-auto" v-if="user.logged && user.id != listUser.id">
-                                    <button class="btn" v-on:click="user.follows(listUser.id) ? user.unfollow(listUser): user.follow(listUser)"
-                                     v-bind:class="user.follows(listUser.id) ? 'btn-info' : 'btn-outline-info'">
-                                        {{ user.follows(listUser.id) ? 'Unfollow': 'Follow' }}
-                                    </button>
-                                </div>
-                            </div>
+                            <user-info v-for="_user in users" v-bind:key="_user.id" v-bind:user="_user"
+                                v-bind:app-user="user"></user-info>
                         </div>
                     </div>
 
@@ -58,8 +40,7 @@
                         <div class="bg-light" v-if="!showProfile && !searchUsers">
                             <div class="container p-3 bg-light">
                                 <tweet v-for="entry in entries" v-bind:key="entry.id" v-bind:entry="entry"
-                                    v-bind:user="user" v-bind:show-retweets="false"
-                                    v-bind:avatar="getAvatar(entry.author.id)" v-bind:delete-entry="deleteEntry">
+                                    v-bind:user="user" v-bind:show-retweets="false">
                                 </tweet>
                             </div>
                         </div>
@@ -68,14 +49,12 @@
 
                 <!--Selected user profile-->
                 <div v-if="showProfile">
-                    <profile v-bind:user="selectedUser" v-bind:current-user="user"
-                        v-bind:avatar="getAvatar(selectedUser.id)"></profile>
+                    <profile v-bind:user="selectedUser" v-bind:app-user="user"></profile>
 
                     <div class="bg-light">
                         <div class="container p-3 bg-light">
                             <tweet v-for="entry in selectedUserEntries" v-bind:key="entry.id" v-bind:entry="entry"
-                                v-bind:user="selectedUser" v-bind:show-retweets="true"
-                                v-bind:avatar="getAvatar(entry.author.id)" v-bind:delete-entry="deleteEntry">
+                                v-bind:user="selectedUser" v-bind:show-retweets="true"></tweet>
                             </tweet>
                         </div>
                     </div>
@@ -84,7 +63,11 @@
         </div>
 
         <div class="col-4">
-            <div class="p-3 border-bottom bg-light">Reserved</div>
+            <div class="p-3 border-bottom bg-light">
+                <h5>Recommended</h5>
+                <user-info v-for="_user in user.recommended" v-bind:key="_user.id" v-bind:user="_user"
+                    v-bind:app-user="user"></user-info>
+            </div>
         </div>
     </div>
 </div>
