--- a/Frontend/Web/components/profile/edit.html
+++ b/Frontend/Web/components/profile/edit.html
@@ -8,7 +8,7 @@
         <div class="modal-body">
             <div class="form-floating mb-3">
                 <input type="form-control" class="form-control" v-bind:class="nameInvalid ? 'is-invalid': ''"
-                    id="edit-name" v-bind:value="user.name" required aria-describedby="nameValidation">
+                    id="edit-name" v-bind:value="appUser.name" required aria-describedby="nameValidation">
                 <label for="edit-name">Name</label>
 
                 <div id="nameValidation" class="invalid-feedback">
@@ -18,7 +18,7 @@
 
             <div class="form-floating mb-3">
                 <input type="form-control" class="form-control" v-bind:class="usernameInvalid ? 'is-invalid': ''"
-                    id="edit-username" v-bind:value="user.username" required
+                    id="edit-username" v-bind:value="appUser.username" required
                     aria-describedby="edit-username-validation">
                 <label for="edit-username">Username</label>
 
@@ -29,7 +29,7 @@
 
             <div class="form-floating mb-3">
                 <textarea type="form-control" type="text" style="resize: none; overflow: hidden;" class="form-control"
-                    id="about" maxlength="160" v-bind:value="user.about"
+                    id="about" maxlength="160" v-bind:value="appUser.about"
                     oninput='this.style.height = "";this.style.height = this.scrollHeight + "px"'></textarea>
                 <label for="about">About</label>
 
