--- a/Frontend/Web/components/profile/profile.html
+++ b/Frontend/Web/components/profile/profile.html
@@ -6,11 +6,27 @@
 
         <!--Entries column-->
         <div class="col-5 bg-light">
-            <profile v-bind:user="user" v-bind:app-user="user"></profile>
+            <profile v-bind:user="appUser" v-bind:app-user="appUser"></profile>
+
+            <div class="dropdown pt-3">
+                <button class="btn btn-success dropdown-toggle" type="button" id="profile-dropdown"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    {{ contentType }}
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="profile-dropdown">
+                    <li><a class="dropdown-item" v-on:click="contentType = 'Tweets'" href="#">Tweets</a></li>
+                    <li><a class="dropdown-item" v-on:click="contentType = 'Likes'" href="#">Likes</a></li>
+                    <li><a class="dropdown-item" v-on:click="contentType = 'Retweets'" href="#">Retweets</a></li>
+                </ul>
+            </div>
 
             <div class="bg-light">
                 <div class="container p-3 bg-light">
-                    <tweet v-for="entry in user.entries" v-bind:key="entry.id" v-bind:entry="entry" v-bind:user="user"
+                    <div class="d-flex justify-content-center" v-if="getContent().length == 0">
+                        <h5>No content</h5>
+                    </div>
+
+                    <tweet v-else v-for="entry in getContent()" v-bind:key="entry.id" v-bind:entry="entry" v-bind:user="appUser"
                         v-bind:show-retweets="true" v-bind:delete-entry="deleteEntry">
                     </tweet>
                 </div>
@@ -18,11 +34,35 @@
         </div>
 
         <div class="col-4">
-            <div class="p-3 border-bottom bg-light">
+            <div class="p-3 bg-light">
                 <h5>Recommended</h5>
-                <user-info v-for="_user in user.recommended" v-bind:key="_user.id" v-bind:user="_user"
-                    v-bind:app-user="user"></user-info>
+                <user-info v-for="_user in appUser.recommended" v-bind:key="_user.id" v-bind:user="_user"
+                    v-bind:app-user="appUser"></user-info>
             </div>
+
+            <div class="dropdown pt-3">
+                <button class="btn btn-success dropdown-toggle" type="button" id="profile-followers-dropdown"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    {{ followerType }}
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="profile-followers-dropdown">
+                    <li><a class="dropdown-item" v-on:click="followerType = 'Followers'" href="#">Followers</a></li>
+                    <li><a class="dropdown-item" v-on:click="followerType = 'Following'" href="#">Following</a></li>
+                </ul>
+            </div>
+
+            <div class="bg-light">
+                <div class="container p-3 bg-light">
+                    <div class="d-flex justify-content-center" v-if="getFollowers().length == 0">
+                        <h5>No content</h5>
+                    </div>
+
+                    <user-info v-else v-for="user in getFollowers()" v-bind:key="user.id" v-bind:user="user"
+                        v-bind:app-user="appUser">
+                    </user-info>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
