--- a/Frontend/Web/components/tweet.html
+++ b/Frontend/Web/components/tweet.html
@@ -19,7 +19,7 @@
                 </div>
             </div>
 
-            <div class="p-3 border-bottom" v-if="user.logged">
+            <div class="p-3 border-bottom" v-if="appUser.logged">
                 <textarea type="text" style="resize: none; overflow: hidden;" id="post" class="form-control" maxlength="128"
                     placeholder="Write your reply" v-model="text"
                     oninput='this.style.height = "";this.style.height = this.scrollHeight + "px"'></textarea>
@@ -39,7 +39,7 @@
                     <div class="col-auto">
                         <b style="font-size: large;">{{ comment.author.name }}</b> @{{ comment.author.username }}
                         <button type="button" class="btn btn-default" aria-label="Left Align"
-                            v-on:click='deleteComment(comment.id)' v-if="comment.authorId == user.id">
+                            v-on:click='deleteComment(comment.id)' v-if="comment.authorId == appUser.id">
                             <span class="la la-trash" aria-hidden="true"></span>
                         </button> <br>
                         <a style="color: black; word-wrap: break-word;">{{ comment.text }}</a>
